@@ -53,8 +53,7 @@ class TestBasicOps(unittest.TestCase):
         state3 = self.gen.getstate()    # s/b distinct from state2
         self.assertNotEqual(state2, state3)
 
-        # Silence py3k warnings
-        with test_support.check_warnings():
+        with test_support.check_py3k_warnings(quiet=True):
             self.assertRaises(TypeError, self.gen.jumpahead)  # needs an arg
             self.assertRaises(TypeError, self.gen.jumpahead, "ick")  # wrong type
             self.assertRaises(TypeError, self.gen.jumpahead, 2.3)  # wrong type
