@@ -512,8 +512,7 @@ class UnicodeTest(
         )
 
         if not sys.platform.startswith('java'):
-            # Silence Py3k warning
-            with test_support.check_warnings():
+            with test_support.check_py3k_warnings():
                 buf = buffer('character buffers are decoded to unicode')
             self.assertEqual(
                 unicode(
